add styling navigation bar

--- a/index.html
+++ b/index.html
@@ -12,16 +12,20 @@
 <body>
     <!-- NAV BAR  -->
     <section>
-        <h1>AgriPlus</h1>
-        <div>
-            <a href="#Home">Home</a>
-            <a>About</a>
-            <a>Products</a>
-            <a>Contact Us</a>
-        </div>
-        <div>
-            <a>Login</a>
-            <a><button>Get Started</button></a>
+        <div class="topnav">
+            <h1>AgriPlus</h1>
+            <div class="nav">
+                <a href="#Home">Home</a>
+                <a>About</a>
+                <a>Products</a>
+                <a>Contact Us</a>
+            </div>
+            <div class="topend">
+                <a>Login</a>
+                <div class="btn">
+                    <a><button>Get Started</button></a>
+                </div>
+            </div>
         </div>
 
     </section>
