--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
                 <a>About</a>
                 <a>Products</a>
                 <a>Contact Us</a>
-            </div>
-            <div class="topend">
+                <div></div> 
                 <a>Login</a>
-                <div class="btn">
-                    <a><button>Get Started</button></a>
-                </div>
+
+                <a id="button"><button>Get Started</button></a>
+
             </div>
         </div>
 
@@ -32,7 +31,7 @@
 
     <!-- SECTION 1 -->
     <section>
-        <div>
+        <div class="produce">
             <h1>Buying and selling farm produce has never been easier.</h1>
             <p>Agriplus is here to have you sorted ,you can order farm produce from the farmers ,harvesters, and
                 producers directly</p>
