add image background, style image 2

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a>About</a>
                 <a>Products</a>
                 <a>Contact Us</a>
-                <div></div> 
+                <div></div>
                 <a>Login</a>
 
                 <a id="button"><button>Get Started</button></a>
@@ -32,16 +32,21 @@
     <!-- SECTION 1 -->
     <section>
         <div class="produce">
-            <h1>Buying and selling farm produce has never been easier.</h1>
-            <p>Agriplus is here to have you sorted ,you can order farm produce from the farmers ,harvesters, and
-                producers directly</p>
-            <div>
+            <div class="text">
+                <h1>Buying and selling farm produce has never been easier.</h1>
+                <p>Agriplus is here to have you sorted ,you can order farm produce from the farmers ,harvesters, and
+                    producers directly</p>
+            </div>
+
+            <div class="image2">
                 <img src="assets/image 2.png" alt="image">
             </div>
-            <div>
-                <button>Explore More</button>
-            </div>
         </div>
+
+        <div class="button1">
+            <button>Explore More</button>
+        </div>
+
     </section>
 
     <!-- SECTION 2 -->
