--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div></div>
                 <a>Login</a>
 
-                <a id="button"><button>Get Started</button></a>
+                <a class="button">Get Started</a>
 
             </div>
         </div>
@@ -30,22 +30,23 @@
     </section>
 
     <!-- SECTION 1 -->
-    <section>
+    <section class="sect1">
         <div class="produce">
             <div class="text">
-                <h1>Buying and selling farm produce has never been easier.</h1>
+                <h1>Buying and selling quality <br> farm produce has never <br>  been easier.</h1>
                 <p>Agriplus is here to have you sorted ,you can order farm produce from the farmers ,harvesters, and
                     producers directly</p>
+
+                <a class="button1">Explore More</a>
             </div>
+
 
             <div class="image2">
                 <img src="assets/image 2.png" alt="image">
             </div>
         </div>
-
-        <div class="button1">
-            <button>Explore More</button>
         </div>
+
 
     </section>
 
