--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section class="sect1">
         <div class="produce">
             <div class="text">
-                <h1>Buying and selling quality <br> farm produce has never <br>  been easier.</h1>
+                <h1>Buying and selling quality <br> farm produce has never <br> been easier.</h1>
                 <p>Agriplus is here to have you sorted ,you can order farm produce from the farmers ,harvesters, and
                     producers directly</p>
 
@@ -51,11 +51,17 @@
     </section>
 
     <!-- SECTION 2 -->
-    <section>
-        <div>
-            <p>200+ <br>Verified Vendors</p>
-            <p>106+ <br>Happy Customers</p>
-            <p>2000+ <br>Nation Wide Customers</p>
+    <section class="sect2">
+        <div class="goals">
+            <div>
+                <p>200+ <br>Verified Vendors</p>
+            </div>
+            <div>
+                <p>106+ <br>Happy Customers</p>
+            </div>
+            <div>
+                <p>2000+ <br>Nation Wide Customers</p>
+            </div>
         </div>
 
     </section>
