--- a/index.html
+++ b/index.html
@@ -67,15 +67,16 @@
     </section>
 
     <!-- SECTION 3 -->
-    <section>
-        <div>
+    <section class="sect3">
+        <div class="sect3a">
             <h2>Why we exist</h2>
-            <p>we are built to make your work easier. Like any other online ecommerce, Agriplus provide a great platform
-                for farmers to reach their customers throughout the country. We have made it easier to shop from anywher
+            <p>we are built to make your work easier. Like any other online <br> ecommerce, Agriplus provide a great platform
+                for <br> farmers to reach their customers throughout the country. We have made it easier to shop from anywhere
                 through the platform</p>
 
         </div>
-        <div><img src="assets/image 3.png" alt="image">
+        <div class="sect3b">
+            <img src="assets/image 3.png" alt="image">
 
         </div>
     </section>
