style text alignment in section and font size

--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
     </section>
 
     <!-- SECTION 4 -->
-    <section>
+    <section class="sect4">
         <h2>Our Categories of Products</h2>
-        <p>We go beyond the borders to ensure you get fresh produce from the farm. Our customer satisfaction is thhe
+        <p>We go beyond the borders to ensure you get fresh produce <br> from the farm. Our customer satisfaction is thhe
             mission</p>
 
     </section>
