--- a/index.html
+++ b/index.html
@@ -70,8 +70,10 @@
     <section class="sect3">
         <div class="sect3a">
             <h2>Why we exist</h2>
-            <p>we are built to make your work easier. Like any other online <br> ecommerce, Agriplus provide a great platform
-                for <br> farmers to reach their customers throughout the country. We have made it easier to shop from anywhere
+            <p>we are built to make your work easier. Like any other online <br> ecommerce, Agriplus provide a great
+                platform
+                for <br> farmers to reach their customers throughout the country. We have made it easier to shop from
+                anywhere
                 through the platform</p>
 
         </div>
@@ -84,49 +86,64 @@
     <!-- SECTION 4 -->
     <section class="sect4">
         <h2>Our Categories of Products</h2>
-        <p>We go beyond the borders to ensure you get fresh produce <br> from the farm. Our customer satisfaction is thhe
+        <p>We go beyond the borders to ensure you get fresh produce <br> from the farm. Our customer satisfaction is
+            thhe
             mission</p>
 
     </section>
 
     <!-- SECTION 5 -->
-    <section>
+    <section class="list">
         <h2>Most Popular</h2>
-        <div>
+        <div class="float1">
             <div><img src="assets/Rectangle 5.png" alt="image">
                 <h3>Fresh Carrots</h3>
-                <p></p>
+                <p>Kinyanjui farmers Association</p>
+                <p1>
+                    Ksh.200/kg
+
+                </p1>
             </div>
             <div><img src="assets/image 4.png" alt="image">
                 <h3>Cereals</h3>
-                <p></p>
+                <p>Kenya Cereals Board</p>
+                <p1>
+                    Ksh 5000/bag
+                </p1>
             </div>
             <div><img src="assets/image 5.png" alt="image">
                 <h3>Fresh fish/Tilapia</h3>
-                <p></p>
+                <p>Mr. Otieno</p>
+                <p>Ksh. 500/kg</p>
             </div>
             <div><img src="assets/image 6.png" alt="image">
                 <h3>Kales/Sukuma Wiki</h3>
+                <p>Njoki's Farm</p>
+                <p>Ksh. 50/bunch</p>
             </div>
         </div>
 
         <h2>Newest Item</h2>
-        <div>
+        <div class="float2">
             <div><img src="assets/Rectangle 6.png" alt="image">
                 <h3>Chicken</h3>
-                <p></p>
+                <p>Wafula Farm</p>
+                <p1>Ksh. 700</p1>
             </div>
             <div><img src="assets/Rectangle 7.png" alt="image">
                 <h3>Ahero/Ir Rice</h3>
-                <p></p>
+                <p>Ahero Irrigation Board</p>
+                <p1>Ksh. 200/Kg</p1>
             </div>
             <div><img src="assets/Rectangle 8.png" alt="image">
                 <h3>Mursik</h3>
-                <p></p>
+                <p>Korir Dairy Farm</p>
+                <p1>Ksh. 200/Kg</p1>
             </div>
             <div><img src="assets/Rectangle 9.png" alt="image">
                 <h3>Fresh Tomatoes</h3>
-                <p></p>
+                <p>TZ Farmers Association</p>
+                <p1>Ksh. 5000/crate</p1>
             </div>
             <div>
                 <h5>See All</h5>
