add font size and add spacing to images,add border box

--- a/index.html
+++ b/index.html
@@ -99,82 +99,104 @@
             <div><img src="assets/Rectangle 5.png" alt="image">
                 <h3>Fresh Carrots</h3>
                 <p>Kinyanjui farmers Association</p>
-                <p1>
+                <p id="amount">
                     Ksh.200/kg
 
-                </p1>
+                </p>
             </div>
             <div><img src="assets/image 4.png" alt="image">
                 <h3>Cereals</h3>
                 <p>Kenya Cereals Board</p>
-                <p1>
+                <p id="amount">
                     Ksh 5000/bag
-                </p1>
+                </p>
             </div>
             <div><img src="assets/image 5.png" alt="image">
                 <h3>Fresh fish/Tilapia</h3>
                 <p>Mr. Otieno</p>
-                <p>Ksh. 500/kg</p>
+                <p id="amount">Ksh. 500/kg</p>
             </div>
             <div><img src="assets/image 6.png" alt="image">
                 <h3>Kales/Sukuma Wiki</h3>
                 <p>Njoki's Farm</p>
-                <p>Ksh. 50/bunch</p>
+                <p id="amount">Ksh. 50/bunch</p>
             </div>
         </div>
 
         <h2>Newest Item</h2>
         <div class="float2">
-            <div><img src="assets/Rectangle 6.png" alt="image">
+            <div>
+                <img src="assets/Rectangle 6.png" alt="image">
                 <h3>Chicken</h3>
                 <p>Wafula Farm</p>
-                <p1>Ksh. 700</p1>
+                <p id="amount">Ksh. 700</p>
             </div>
-            <div><img src="assets/Rectangle 7.png" alt="image">
+            <div>
+                <img src="assets/Rectangle 7.png" alt="image">
                 <h3>Ahero/Ir Rice</h3>
                 <p>Ahero Irrigation Board</p>
-                <p1>Ksh. 200/Kg</p1>
+                <p id="amount">Ksh. 200/Kg</p>
             </div>
-            <div><img src="assets/Rectangle 8.png" alt="image">
+            <div>
+                <img src="assets/Rectangle 8.png" alt="image">
                 <h3>Mursik</h3>
                 <p>Korir Dairy Farm</p>
-                <p1>Ksh. 200/Kg</p1>
+                <p id="amount">Ksh. 200/Kg</p>
             </div>
             <div><img src="assets/Rectangle 9.png" alt="image">
                 <h3>Fresh Tomatoes</h3>
                 <p>TZ Farmers Association</p>
-                <p1>Ksh. 5000/crate</p1>
+                <p id="amount">Ksh. 5000/crate</p>
             </div>
-            <div>
-                <h5>See All</h5>
-            </div>
-
         </div>
+        <div class="see">
+            <h5>See All</h5>
+        </div>
+
+
     </section>
 
     <!-- SECTION 6 -->
-    <section>
+    <section class="sect5">
 
         <h5>What our Esteemed customers has to say about us</h5>
-        <div>
-            <h5>"The most efficient way to get fresh produce"</h5>
-            <div>
+        <div class="esteemed">
+            <div class="esteem">
+                <span class="fa fa-star"></span>
+                <span class="fa fa-star"></span>
+                <span class="fa fa-star"></span>
+                <span class="fa fa-star"></span>
+                <span class="fa fa-star"></span>
+
+                <h5>"The most efficient way to get fresh produce"</h5>
+
                 <img src="assets/Rectangle 11.png" alt="">
+
+                <div>
+                    <p id="name">Rebecca Mkulima</p>
+                </div>
+            </div>
+
+            <div class="esteem">
+                <h5>"AgriPlus is the best place to market your produce"</h5>
+                <div>
+                    <img src="assets/Rectangle 11-1.png" alt="">
+                </div>
+                <div>
+                    <p id="name">Rebecca Mkulima</p>
+                </div>
+            </div>
+            <div class="esteem">
+                <h5>"Connecting rural to urban through business"</h5>
+                <div>
+                    <img src="assets/Rectangle 11-2.png" alt="">
+                </div>
+                <div>
+                    <p id="name">Rebecca Mkulima</p>
+                </div>
             </div>
         </div>
-        <div>
-            <h5>"AgriPlus is the best place to market your produce"</h5>
-            <div>
-                <img src="assets/Rectangle 11-1.png" alt="">
-            </div>
-        </div>
-        <div>
-            <h5>"Connecting rural to urban through business"</h5>
-            <div>
-                <img src="assets/Rectangle 11-2.png" alt="">
-            </div>
-        </div>
-        <div>
+        <div class="read">
             <h5>Read More</h5>
         </div>
 
