style images spacing,style footer content allignment,add border to footer

--- a/index.html
+++ b/index.html
@@ -96,27 +96,29 @@
     <section class="list">
         <h2>Most Popular</h2>
         <div class="float1">
-            <div><img src="assets/Rectangle 5.png" alt="image">
+            <div class="products">
+                <img src="assets/Rectangle 5.png" alt="image">
                 <h3>Fresh Carrots</h3>
                 <p>Kinyanjui farmers Association</p>
                 <p id="amount">
-                    Ksh.200/kg
-
-                </p>
+                    Ksh.200/kg</p>
             </div>
-            <div><img src="assets/image 4.png" alt="image">
+            <div class="products">
+                <img src="assets/image 4.png" alt="image">
                 <h3>Cereals</h3>
                 <p>Kenya Cereals Board</p>
                 <p id="amount">
                     Ksh 5000/bag
                 </p>
             </div>
-            <div><img src="assets/image 5.png" alt="image">
+            <div class="products">
+                <img src="assets/image 5.png" alt="image">
                 <h3>Fresh fish/Tilapia</h3>
                 <p>Mr. Otieno</p>
                 <p id="amount">Ksh. 500/kg</p>
             </div>
-            <div><img src="assets/image 6.png" alt="image">
+            <div class="products">
+                <img src="assets/image 6.png" alt="image">
                 <h3>Kales/Sukuma Wiki</h3>
                 <p>Njoki's Farm</p>
                 <p id="amount">Ksh. 50/bunch</p>
@@ -125,25 +127,26 @@
 
         <h2>Newest Item</h2>
         <div class="float2">
-            <div>
+            <div class="products">
                 <img src="assets/Rectangle 6.png" alt="image">
                 <h3>Chicken</h3>
                 <p>Wafula Farm</p>
                 <p id="amount">Ksh. 700</p>
             </div>
-            <div>
+            <div class="products">
                 <img src="assets/Rectangle 7.png" alt="image">
                 <h3>Ahero/Ir Rice</h3>
                 <p>Ahero Irrigation Board</p>
                 <p id="amount">Ksh. 200/Kg</p>
             </div>
-            <div>
+            <div class="products">
                 <img src="assets/Rectangle 8.png" alt="image">
                 <h3>Mursik</h3>
                 <p>Korir Dairy Farm</p>
                 <p id="amount">Ksh. 200/Kg</p>
             </div>
-            <div><img src="assets/Rectangle 9.png" alt="image">
+            <div class="products">
+                <img src="assets/Rectangle 9.png" alt="image">
                 <h3>Fresh Tomatoes</h3>
                 <p>TZ Farmers Association</p>
                 <p id="amount">Ksh. 5000/crate</p>
@@ -161,11 +164,13 @@
 
         <h5>What our Esteemed customers has to say about us</h5>
         <div class="esteemed">
+            <link rel="stylesheet"
+                href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
             <div class="esteem">
-                <span class="fa fa-star"></span>
-                <span class="fa fa-star"></span>
-                <span class="fa fa-star"></span>
-                <span class="fa fa-star"></span>
+                <span class="fa fa-star check"></span>
+                <span class="fa fa-star check"></span>
+                <span class="fa fa-star check"></span>
+                <span class="fa fa-star check"></span>
                 <span class="fa fa-star"></span>
 
                 <h5>"The most efficient way to get fresh produce"</h5>
@@ -178,81 +183,109 @@
             </div>
 
             <div class="esteem">
+                <span class="fa fa-star check"></span>
+                <span class="fa fa-star check"></span>
+                <span class="fa fa-star check"></span>
+                <span class="fa fa-star check"></span>
+                <span class="fa fa-star check"></span>
                 <h5>"AgriPlus is the best place to market your produce"</h5>
                 <div>
                     <img src="assets/Rectangle 11-1.png" alt="">
                 </div>
                 <div>
-                    <p id="name">Rebecca Mkulima</p>
+                    <p id="name">John Joe</p>
                 </div>
             </div>
             <div class="esteem">
+                <span class="fa fa-star check"></span>
+                <span class="fa fa-star check"></span>
+                <span class="fa fa-star check"></span>
+                <span class="fa fa-star check"></span>
+                <span class="fa fa-star check"></span>
                 <h5>"Connecting rural to urban through business"</h5>
                 <div>
                     <img src="assets/Rectangle 11-2.png" alt="">
                 </div>
                 <div>
-                    <p id="name">Rebecca Mkulima</p>
+                    <p id="name">Lavington dwellers</p>
                 </div>
             </div>
         </div>
         <div class="read">
-            <h5>Read More</h5>
+            <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+            <i class="fas fa-long-arrow-alt-right arrow"></i>
+            <h3>Read More</h3>
         </div>
 
     </section>
 
-    <!-- FOOTER -->
+    <!-- SECTION 6 -->
 
-    <section>
-        <div>
+    <section class="footer">
+        <div class="sect6">
             <div>
-                <h5>We,d like to keep in touch</h5>
+                <h3>We,d like to keep in touch</h3>
                 <p>Subscribe to our newsletter</p>
             </div>
-            <div>
-                <h5>enter your email address</h5>
+            <div class="boxes">
+                <div class="box">
+                    <h5>enter your email address</h5>
+                </div>
+                <div class="box2">
+                    <h5>Subscribe</h5>
+                </div>
             </div>
-            <div>
-                <h1>AgriPlus</h1>
-                <p>Quality Farm produce through buying and selling</p>
-            </div>
-            <div>
-                <h1>Icons </h1>
-            </div>
-            <div>
-                <h1>Get the app</h1>
-            </div>
-            <div>
-                <p>App store</p>
-                <p>Google Play</p>
-            </div>
+
         </div>
-        <div>
-            <div>
-                <h2>Company</h2>
-                <ul>
-                    <li>About</li>
-                    <li>Product</li>
-                    <li>Contact Us</li>
-                </ul>
-                <h2>Products</h2>
-                <ul>
-                    <li>Dairy</li>
-                    <li>Cereals</li>
-                    <li>Vegetables & Fruits</li>
-                    <li>Mores...</li>
-                </ul>
-                <h2>
+
+        <section class="bottom">
+            <div class="icons1">
+                <div>
+                    <h1>AgriPlus</h1>
+                    <p>Quality Farm produce through buying and selling</p>
+                </div>
+                <div>
+                    <h1>Icons </h1>
+                </div>
+                <div>
+                    <h1>Get the app</h1>
+                </div>
+                <div>
+                    <p>App store</p>
+                    <p>Google Play</p>
+                </div>
+            </div>
+            <div class="icons2">
+                <div>
+                    <h2>Company</h2>
+                    <ul>
+                        <li>About</li>
+                        <li>Product</li>
+                        <li>Contact Us</li>
+                    </ul>
+                </div>
+                <div>
+                    <h2>Products</h2>
+                    <ul>
+                        <li>Dairy</li>
+                        <li>Cereals</li>
+                        <li>Vegetables & Fruits</li>
+                        <li>Mores...</li>
+                    </ul>
+                </div>
+                <div>
+                    <h2>Others</h2>
                     <ol>
                         <li>FAQs</li>
                         <li>Terms of service</li>
                         <li>Privacy and Policy</li>
                     </ol>
-                </h2>
+                </div>
+                <div class="close">
+                    <h4>All rights reserved, terms and conditions applied</h4>
+                </div>
             </div>
-        </div>
-        <h4>All rights reserved, terms and conditions applied</h4>
+        </section>
     </section>
 
 </body>
