add font size,change content allignment

--- a/index.html
+++ b/index.html
@@ -45,13 +45,7 @@
                 <img src="assets/image 2.png" alt="image">
             </div>
         </div>
-        </div>
 
-
-    </section>
-
-    <!-- SECTION 2 -->
-    <section class="sect2">
         <div class="goals">
             <div>
                 <p>200+ <br>Verified Vendors</p>
@@ -256,7 +250,7 @@
                 </div>
             </div>
             <div class="icons2">
-                <div>
+                <div class="icon">
                     <h2>Company</h2>
                     <ul>
                         <li>About</li>
@@ -264,7 +258,7 @@
                         <li>Contact Us</li>
                     </ul>
                 </div>
-                <div>
+                <div class="icon">
                     <h2>Products</h2>
                     <ul>
                         <li>Dairy</li>
@@ -273,7 +267,7 @@
                         <li>Mores...</li>
                     </ul>
                 </div>
-                <div>
+                <div class="icon">
                     <h2>Others</h2>
                     <ol>
                         <li>FAQs</li>
@@ -281,11 +275,13 @@
                         <li>Privacy and Policy</li>
                     </ol>
                 </div>
-                <div class="close">
-                    <h4>All rights reserved, terms and conditions applied</h4>
-                </div>
             </div>
         </section>
+            <div class="close">
+                <h4>All rights reserved, terms and conditions applied</h4>
+            </div>
+
+        
     </section>
 
 </body>
