change font family

--- a/index.html
+++ b/index.html
@@ -245,8 +245,7 @@
                     <h1>Get the app</h1>
                 </div>
                 <div>
-                    <p>App store</p>
-                    <p>Google Play</p>
+                    <img src="assets/google-pay-and-app-store-app-pay-vector-37017070.jpg" alt="logos" height="100px">
                 </div>
             </div>
             <div class="icons2">
