delete images,style images border

--- a/index.html
+++ b/index.html
@@ -244,8 +244,13 @@
                 <div>
                     <h1>Get the app</h1>
                 </div>
-                <div>
-                    <img src="assets/google-pay-and-app-store-app-pay-vector-37017070.jpg" alt="logos" height="100px">
+                <div class="logos">
+                    <div>
+                        <img src="assets/google-pay-and-app-store-app-logo.png" alt="logos" height="50px">
+                    </div>
+                    <div>
+                        <img src="assets/google-pay-and-app-store-apple-logo.png" alt="logo" height="50px">
+                    </div>
                 </div>
             </div>
             <div class="icons2">
@@ -276,11 +281,11 @@
                 </div>
             </div>
         </section>
-            <div class="close">
-                <h4>All rights reserved, terms and conditions applied</h4>
-            </div>
+        <div class="close">
+            <h4>All rights reserved, terms and conditions applied</h4>
+        </div>
 
-        
+
     </section>
 
 </body>
