add images and style

--- a/index.html
+++ b/index.html
@@ -238,18 +238,27 @@
                     <h1>AgriPlus</h1>
                     <p>Quality Farm produce through buying and selling</p>
                 </div>
-                <div>
-                    <h1>Icons </h1>
+                <div class="logos1">
+                    
+                    <div>
+                        <img src="assets/twitter.jpg" alt="">
+                    </div>
+                    <div>
+                        <img src="assets/fb icon.jpg" alt="">
+                    </div>
+                    <div>
+                        <img src="assets/insta.jpg" alt="">
+                    </div>
                 </div>
                 <div>
                     <h1>Get the app</h1>
                 </div>
                 <div class="logos">
                     <div>
-                        <img src="assets/google-pay-and-app-store-app-logo.png" alt="logos" height="50px">
+                        <img src="assets/playstorelogo.png" alt="logos" height="50px">
                     </div>
                     <div>
-                        <img src="assets/google-pay-and-app-store-apple-logo.png" alt="logo" height="50px">
+                        <img src="assets/apple-logo.png" alt="logo" height="50px">
                     </div>
                 </div>
             </div>
