--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 <span class="fa fa-star check"></span>
                 <h5>"AgriPlus is the best place to market your produce"</h5>
                 <div>
-                    <img src="assets/Rectangle 11-1.png" alt="">
+                    <img src="./assets/Rectangle 11-1.png" alt="">
                 </div>
                 <div>
                     <p id="name">John Joe</p>
@@ -198,7 +198,7 @@
                 <span class="fa fa-star check"></span>
                 <h5>"Connecting rural to urban through business"</h5>
                 <div>
-                    <img src="assets/Rectangle 11-2.png" alt="">
+                    <img src="./assets/Rectangle 11-2.png" alt="Rectangle">
                 </div>
                 <div>
                     <p id="name">Lavington dwellers</p>
