resize images , style content spacing on footer

--- a/index.html
+++ b/index.html
@@ -241,17 +241,17 @@
                 <div class="logos1">
                     
                     <div>
-                        <img src="assets/twitter.jpg" alt="">
+                        <img src="assets/twitter.jpg" alt="log twitter" height="30px">
                     </div>
                     <div>
-                        <img src="assets/fb icon.jpg" alt="">
+                        <img src="assets/fb icon.jpg" alt="logo fb" height="30px">
                     </div>
                     <div>
-                        <img src="assets/insta.jpg" alt="">
+                        <img src="assets/insta.jpg" alt="logo instagram" height="30px">
                     </div>
                 </div>
-                <div>
-                    <h1>Get the app</h1>
+                <div class="app">
+                    <h2>Get the app</h2>
                 </div>
                 <div class="logos">
                     <div>
