align box in sectio 1, resize box and

--- a/index.html
+++ b/index.html
@@ -37,8 +37,13 @@
                 <p>Agriplus is here to have you sorted ,you can order farm produce from the farmers ,harvesters, and
                     producers directly</p>
 
-                <a class="button1">Explore More</a>
+
+                <div class="explore">
+
+                    <a class="button1">Explore More</a>
+                </div>
             </div>
+
 
 
             <div class="image2">
@@ -239,7 +244,7 @@
                     <p>Quality Farm produce through buying and selling</p>
                 </div>
                 <div class="logos1">
-                    
+
                     <div>
                         <img src="assets/twitter.jpg" alt="log twitter" height="30px">
                     </div>
