style and reposition text,change border size and margin

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
             <div class="icons2">
                 <div class="icon">
                     <h2>Company</h2>
-                    <ul>
+                    <ul id="list">
                         <li>About</li>
                         <li>Product</li>
                         <li>Contact Us</li>
@@ -278,20 +278,20 @@
                 </div>
                 <div class="icon">
                     <h2>Products</h2>
-                    <ul>
+                    <ul id="list">
                         <li>Dairy</li>
                         <li>Cereals</li>
-                        <li>Vegetables & Fruits</li>
+                        <li>Vegetables&Fruits</li>
                         <li>Mores...</li>
                     </ul>
                 </div>
                 <div class="icon">
                     <h2>Others</h2>
-                    <ol>
+                    <ul id="list">
                         <li>FAQs</li>
                         <li>Terms of service</li>
                         <li>Privacy and Policy</li>
-                    </ol>
+                    </ul>
                 </div>
             </div>
         </section>
