resize content on section 1 , update README

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="topnav">
             <h1>AgriPlus</h1>
             <div class="nav">
-                <a href="#Home">Home</a>
+                <a href="#Home"><u>Home</u></a>
                 <a>About</a>
                 <a>Products</a>
                 <a>Contact Us</a>
@@ -68,7 +68,7 @@
     <!-- SECTION 3 -->
     <section class="sect3">
         <div class="sect3a">
-            <h2>Why we exist</h2>
+            <h2><u>Why we</u> exist</h2>
             <p>we are built to make your work easier. Like any other online <br> ecommerce, Agriplus provide a great
                 platform
                 for <br> farmers to reach their customers throughout the country. We have made it easier to shop from
@@ -84,7 +84,7 @@
 
     <!-- SECTION 4 -->
     <section class="sect4">
-        <h2>Our Categories of Products</h2>
+        <h2>Our Cate<u>gories</u> of Products</h2>
         <p>We go beyond the borders to ensure you get fresh produce <br> from the farm. Our customer satisfaction is
             thhe
             mission</p>
